created first website

--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
-    <title></title>
+    <title>CASSIDY'S KEWL WEBSITE</title>
+    <LINK rel="stylesheet" href="./style.css"
   </head>
   <body>
+    <h1>Hello, world!</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e0/SNice.svg/1200px-SNice.svg.png"</img>
+    <h4>BE THE CHANGE YOU WISH TO SEE IN THE WORLD</h4>
+    <img src="https://video-images.vice.com/_uncategorized/1502187137534-SMILEY_BAR.png"</img>
+    <p>I love you!</p>
+    <button class="btn mission-accomplished">MISSION ACCOMPLISHED</button>
     <h1></h1>
   </body>
 </html>
